--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/material": "^5.14.18",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
